After Razor Views

--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -5,16 +5,14 @@
 }
 <form asp-action="Edit" method="post">
     <div>
-        @Html.LabelFor(m => m.Name)
-        <label asp-for="Name"/>
+        <label asp-for="Name"></label>
         <input asp-for="Name"/>
         <span asp-validation-for="Name"/>
-        @*@Html.EditorFor(m => m.Name)
-        @Html.ValidationMessageFor(m => m.Name)*@
     </div>
     <div>
-        @Html.DropDownListFor(m => m.Cuisine, Html.GetEnumSelectList(typeof(CuisineType)))
-        @Html.ValidationMessageFor(m => m.Cuisine)
+        <label asp-for="Cuisine"></label>
+        <select asp-for="Cuisine" asp-items="@Html.GetEnumSelectList(typeof(CuisineType))"></select>
+        <span asp-validation-for="Cuisine"/>
     </div>
     <div>
         <input type="submit" value="Save" />
