--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+
+
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -8,6 +13,27 @@
 <body>
     <div>
         @DateTime.Now.Year
+    </div>
+    
+    <div>
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <div>
+                <form method="post" asp-controller="Account" asp-action="Logout">
+                    <input type="submit" value="Logout" />
+                </form>
+            </div>
+            <div>
+                Hello: @User.Identity.Name
+            </div>
+
+        }
+        else
+        { 
+            <a asp-controller="Account" asp-action="Login" >Login</a>
+            <a asp-controller="Account" asp-action="Register">Register</a>
+
+        }
     </div>
     <div>
         @RenderBody()
