--- a/Views/Home/_Summary.cshtml
+++ b/Views/Home/_Summary.cshtml
@@ -1,12 +1,13 @@
 ﻿@model GetStarted.Entities.Restaurant
 
-<section>
-    <h3>@Model.Name</h3>
-    <div>
+<section class="panel panel-default">
+    <div class="panel-heading">@Model.Name</div>
+    <div class="panel-body">
         @Model.Cuisine
+        <div>
+            <a class="btn btn-default" asp-action="Detail" asp-route-id="@Model.Id">Detail</a>
+            <a class="btn btn-default" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+        </div>
     </div>
-    <div>
-        <a asp-action="Detail" asp-route-id="@Model.Id">Detail</a>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-    </div>
+    
 </section>
